<resources>
    <string name="app_name">AssignmentUdacoding</string>
    <string name="title_splash_screen">Assignment - Kotlin Mentoring <p>Swaputra Adji Nugroho</p></string>
    <string name="title_login">Kotlin Mentoring Batch 3</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome, </string>
    <string name="task1">1. Membuat Program Kalkulator BMI (Berat Badan Ideal)</string>
    <string name="task2">2. Membuat Aplikasi Hitung Umur</string>
    <string name="count_age">How Old Are You</string>
    <string name="insert_year">Please insert your birth year</string>
    <string name="count">Count</string>
    <string name="your_current_age">Your current age :</string>
    <string name="description">Description</string>
    <string name="desc_ironman">Iron man merupakan salah satu pahlawan super yang terkenal di Dunia Komik Marvel. Tokoh ini diciptakan oleh Stan Lee dan desain rupanya digambarkan oleh Jack Kirby. Iron Man sendiri merupakan seorang ilmuan kaya bernama Anthony Edward Stark atau yang biasa juluki Tony Stark. Tony Stark sendiri merupakan anak dari Howard Stark, seorang ilmuan yang mendirikan perusahaan yang bergerak di bidang teknologi bernama Stark Industries.


Tony Stark pun akhirnya mewarisi perusahaan besar ayahnya. Namun karena hidupnya yang penuh kemewahan, Tony pun masuk dalam dunia malam yang penuh pesta pora. Dalam Hidupnya hanya ada dua kata yakni “Pesta” dan “Wanita”.

Kehidupan Tony Stark berubah saat dirinya diserang sekelompok teroris yang ingin memiliki teknologi senjata pemusnah masal miliknya. Saat sedang memperkenalkan roket bernama “Jerrico” buatannya di Timur Tengah, Tony diserang dengan rudal yang menyebabkan jatungnya rusak dan membutuhkan alat untuk memacunya.</string>
    <string name="desc_hawkeye">Clint Barton adalah karakter fiktif karya Marvel. Karakter ini diciptakan oleh Stan Lee dan Don Heck dan muncul pertama dalam komik Marvel "Tales of Suspense #57" pada tahun 1964. Haweye digambarkan sebagai seorang pemuda yang memiliki keahlian dalam memanah. Ia pun bergabung dalam kelompok The Avengers.


Clint Barton berasal dari daerah Waverly, Iowa. Pada saat berumur 6 tahun, Clint harus kehilangan kedua orang tuanya karena kecelakaan mobil. Menjadi yatim piatu membuat Clint dan sang adik, Barney harus hidup mandiri dan bergabung dengan kelompok karnaval keliling. Seorang ahli pedang di karnaval tersebut tertarik dengan Clint. Clint pun dilatih cara menggunakan panah hingga mahir. Namun suatu saat Clint melihat guru panahnya melakukan penggelap uang yang menyebabkan Clint dipukuli hingga nyaris mati dan ditinggal begitu saja. Clint pun saat itu harus terpisah dengan sang adik. </string>
    <string name="desc_groot">Groot adalah salah satu tokoh dalam Komik Marvel. Karater ini diciptakan oleh Stan Lee, Jack Kirby, dan Dick Ayers. Tokoh yang berbentuk monster pohon ini muncul pertama kali pada komik Tales of Astonish #13 pada November 1960. Meskipun berbentuk seperti monster, Groot merupakan salah satu pahlawan super Marvel.


Groot sendiri sebenarnya adalah alien tumbuhan yang berasal dari planet X. karena tubuh mereka terbentuk dari pohon maka mereka mengalami kesulitan dalam berkomunikasi karena kekakuan dari tenggorokan mereka. Groot sendiri cukup beruntung karena dirinya dapat berbicara meskipun hanya frasa "Aku Groot". Di Planet X, para alien tumbuhan yang cerdas mencoba untuk mengunakan mamalia kecil sebagai peliharaan mereka dengan pengetahuan cerdas yang mereka miliki. Namun Groot memiliki kepribadian berbeda, Ia tak menganggap mamalia kecil sebagai peliharaan melainkan sebagai teman.</string>
    <string name="desc_black_widow">
        Natasha Romanoff atau yang biasa disebut Black Widows adalah salah satu tokoh dalam komik Marvel. Tokoh ini diciptakan oleh Stan Lee, Don Rico, dan Don Heck. Muncul pertama kali di komik berjudul Mystic Comics #4 pada bulan Agustus 1940. Sosok Black Widow merupakan protagonis pada komik tersebut.


Bernama lengkap Natalia Alianavna Romanova, Natasha Romanoff merupakan salah satu agen dari S.H.I.E.L.D. Ia lahir di Stalingrad, Rusia. Awalnya, Natasha merupakan mata-mata Rusia yang direkrut oleh KGB untuk mengumpulkan berbagai informasi. Namun karena merasa dikhianati oleh pihak KGB, Natasha pun akhirnya keluar dari KGB. Setelah berkenalan dengan Nick Fury, Natasha pun akhirnya bergabung dengan S.H.I.E.L.D dan merupakan orang yang berperan penting dalam terbentuknya kelompok The Avengers. Tugas pertamanya saat itu adalah membujuk Tony Stark agar bisa bergabung dengan aliasi pahlawan super tersebut.

Sebagai Black Widow, Natasha Romanoff memiliki kemampuan bela diri yang banyak. Tercatat ia ahli dalam berbagai ilmu bela diri seperti karate, ninjutsu, aikido, dan tinju. Black Widow juga sempat mendapat suntikan "Super-Soldier Serum" sehingga wanita itu memiliki kemampuan fisik dan mental melebihi manusia lainnya salah satunya adalah kebal dari berbagai jenis racun dan wabah penyakit.
    </string>
    <string name="desc_hulk">
       Hulk merupakan salah satu karakter dari Marvel yang diciptakan oleh Stan Lee dan Jack Kirby. Karakter Hulk pertama kali muncul pada komik berjudul The Incredible Hulk yang diterbitkan pada tahun 1962. Tujuan diciptakannya karakter Hulk awalnya ada untuk mengingatkan para pembaca komik Marvel untuk belajar menahan emosi. Karakter ini pun dibuat berdasarkan pengaruh cerita Frankenstein.


Dr. Robert Bruce Banner atau biasa disebut Bruce Banner adalah seorang ilmuan yang melakukan penelitian bom gamma. Namun pada saat penelitian sedang berlangsung, terjadi kecelakaan yang menyebabkan bom gamma tersebut meledak. Dr. Banner pun terkena radiasi gamma yang mengubahnya menjadi monster humanoid jika emosinya tak dapat di kontrol.
    </string>
    <string name="desc_rocket_raccoon">
        Rocket Racoon adalah karakter dalam komik Marvel. Tokoh ini diciptakan oleh Bill Mantlo dan Keith Giffen dan pertama kali muncul pada Marvel Preview di tahun 1976. Rocket sendiri merupakan sebuah robot berbentuk rakun yang juga merupakan anggota dari Guardians of the Galaxy.

Rocket sebenarnya adalah anggota dari penjaga "Keystone Quardrant" disebuah tempat yang bernama dinding Galacian. Ia berasal dari planet Halfworld, planet dimana para binatang bertingkah dan berpikir layaknya manusia melalui proses genetik. Saat masih di Halfworld, Rocket memiliki sahabat bernama Wal Russ, seekor walrus yang dapat berbicara. Rocket bersama Wal Russ merupakan orang yang melindungi planet mereka dari berbagai ancaman.

    </string>
    <string name="desc_black_panther">
       Black Panter adalah salah satu tokoh pahlawan yang ada di komik Marvel. Karakter ini diciptakan oleh Stan Lee dan Jack Kirby. Tokoh Black Panther pertama kali muncul pada komik Fantastic Four Vol 52 yang terbit pada bulan Juli 1966. Black Panther adalah superhero kulit hitam pertama yang pernah dibuat di Amerika yang kemudian disusul dengan kemunculan Falcon.

T Challa atau Black Panther merupakan putra dari raja T Chaka, pemimpin suku Wakanda. Wakanda merupakan salah satu suku yang berasal dari Afrika. Black Panther sendiri merupakan sebuah julukan dari warga Wakanda untuk menjuluki pahlawan mereka. Awalnya, Raja T Chaka merupakan sosok Black Panther, dirinya melindungi warga Wakanda dari tindak kejahatan. Suku Wakanda memang menutup diri dari dunia luar. Hal tersebut dilakukan karena Wakanda kaya akan Vibranium (bahan pembuat tameng Captain America) dan HYDRA mencari bahan tersebut.
    </string>
    <string name="desc_wanda">
        Scarlet Witch (nama asli Wanda Maximoff juga dikenal sebagai Wanda Frank, Ana Maximoff dan Wanda Magnus) adalah sebuah karakter pahlawan super fiksi yang muncul dalam buku terbitan Marvel Comics. Karakter ini pertama kali muncul X-Men #4 (Maret 1964) dan dibuat oleh Stan Lee dan Jack Kirby. Dia adalah anak perempuan dari Magneto, saudara kembar dari Quicksilver, dan saudara tiri paternal dari Polaris.

Sejak memulai debutnya di Silver Age of Comic Books, Scarlet Witch telah tampil lima dekade di Marvel berturut-turut, membintangi dua judul solo (seri terbatas) bersama dengan suaminya Vision dan sebagai anggota tim pahlawan super reguler di Avengers. Karakter ini juga muncul dalam produk Marvel lain seperti film animasi, permainan arkade dan permainan video; serial televisi dan mainan seperti action figure dan kartu koleksi.

Scarlet Witch berada di peringkat 97 dalam daftar "200 Karakter Buku Komik Terhebat" ("200 Greatest Comic Book Characters of All Time") oleh Wizard[1] dan peringkat 14 dalam daftar "100 Karakter Wanita Terseksi dalam komik" ("100 Sexiest Women in Comics") oleh Comics Buyer Guide.[2]
    </string>
    <string name="desc_spiderman">
       Spider-Man adalah salah satu pahlawan super fiksi Marvel. Tokoh ini diciptakan Stan Lee dan Steve Ditko dan pertama kali muncul pada komik Amazing Fantasy #15 di tahun 1962. Spider-Man sebenarnya adalah sosok pemuda bernama Peter Paker yang mendapat kekuatan setelah digigit laba-laba percobaan.


Peter Benjamin Parker atau biasa disebut Peter Parker adalah seorang pemuda yang berasal dari Forest Hill, New York City. Ayahnya adalah seorang ilmuan jenius yang bernama Richard Paker sementara ibunya adalah bernama Mary. Diumur 7 tahun, Peter dititipkan pada pamannya Ben Parker dan setelah itu kedua orang tuanya meninggal akibat kecelakaan pesawat. Selanjutnya Peter di besarkan oleh paman dan bibinya May yang juga bekerja sebagai perawat. Ia pun tumbuh menjadi pemuda yang cerdas.

    </string>
    <string name="desc_antman">
        Ant-Man adalah salah satu karakter dalam komik Marvel. Pahlawan super yang kekuatannya terinspirasi dari binatang semut ini diciptakan oleh Stan Lee, Jack Kirby, dan Larry Lieber. Ant-Man pertama kali muncul pada komik Tales to Astonish vol 35 yang diterbitkan pada bulan Januari 1962.
    </string>
    <string name="desc_strange">
        Doctor Strange adalah salah satu tokoh yang ada dalam komik Marvel. Tokoh ini diciptakan oleh Steve Ditko. Karakter yang digambarkan mempunyai ilmu magis ini pertama kali muncul pada komik Strange Tales Vol 110 yang diterbitkan pada bulan Juli tahun 1963.


Stephen Vincent Strange atau yang biasa dikenal sebagai Doctor Strange adalah seorang ahli bedah syaraf yang sangat cerdas, namun sifatnya sangat egois dan selalu memikirkan tentang kekayaan dan karirnya. Suatu saat Strange mengalami kecelakaan mobil. Kecelakaan tersebut membuat tangannya cacat karena tulangnya mengalami kerusakan parah. Cacat pada tangannya membuat karirnya sebagai dokter bedah berakhir lantaran tangannya yang selalu gemetar saat melakukan operasi. Dokter Strange pun mencari berbagai macam cara agar tangannya dapat kembali pulih.
    </string>
    <string name="_3_membuat_program_cek_login_sederhana">3. Membuat Program Cek Login Sederhana</string>
    <string name="task4_assignment2">4. Membuat List Menggunakan RecyclerView + Detail Item</string>
    <string name="task5_assignment2">5. Membuat List Menggunakan ListView + Detail Item</string>
    <string name="assignment_week_2">Assignment Week 2</string>
    <string name="assignment_week_3">assignment week 3</string>
    <string name="assignment_week_4">assignment week 4</string>
    <string name="provinsi">Provinsi :</string>
    <string name="tutup">tutup</string>
    <string name="kasus_positif">Kasus Positif :</string>
    <string name="kasus_sembuh">Kasus Sembuh :</string>
    <string name="kasus_meninggal">Kasus Meninggal :</string>
    <string name="kode_provinsi">Kode Provinsi :</string>
</resources>